# eggphy

./: .gitignore  AGENTS.md  ARCHITECTURE_NOTES.md  Makefile  README.md  REPO_GUIDELINES.md  fix_stemma_output.py  pyproject.toml  run_all_stemma.py  run_pipeline.sh  run_stemma_corrected.py  run_stemma_direct.py  run_stemma_final.py  run_stemma_fixed.py  run_stemma_properly.py  test_output.json  test_simple.json  update_text_data.py
.github/workflows/: pages.yml
data/: witness_meta.csv  witnesses.csv  witnesses.json  witnesses_core.csv  witnesses_flat.csv
data/archive/: merged_witnesses.csv  witnesses.json.pre_streamline  witnesses_core.csv  witnesses_old.csv
data/chunks/: witnesses_part_ab.csv  witnesses_part_ac.csv  witnesses_part_af.csv  witnesses_part_ah.csv  witnesses_part_ai.csv
data/raw_sources/: witnesses_raw.csv
docs/: README.md  _config.yml  app.css  app.js  index.html  recipe.css  recipe.html  recipe.js  theme.js
docs/data/: witnesses.csv  witnesses.json
docs/js/: classify.js
docs/stemma/: stemma.css  stemma.html  stemma.js  tree.css  tree.html  tree.js
eggphy-venv/: pyvenv.cfg
models/: character_proposals.jsonl  characters.jsonl  proposal_decisions.jsonl  stemma_manifest.json  stemma_manifest.sh
models/stemma/: witnesses_part_aa.json  witnesses_part_ac.json  witnesses_part_ad.json  (+2 more)
prompts/: coder.md  context_agent.md  deduper.md  matrix_builder.md  proc_discover.md  qc_reporter.md  rep_selector.md  stemma_agent.md  stemma_batch.md  synthesizer.md  text_discover.md  tree_builder.md
tests/: test_cli.py
web/: app.css  app.js  index.html
(+14 files in other folders)
